--- a/com.goutham.test/pom.xml
+++ b/com.goutham.test/pom.xml
@@ -4,4 +4,30 @@
   <artifactId>com.goutham.test</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   
-</project>
+  
+  <dependencies>
+	  <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
+		<dependency>
+		    <groupId>org.seleniumhq.selenium</groupId>
+		    <artifactId>selenium-java</artifactId>
+		    <version>4.7.2</version>
+		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/com.athaydes/spock-reports -->
+		<dependency>
+		    <groupId>com.athaydes</groupId>
+		    <artifactId>spock-reports</artifactId>
+		    <version>2.4.0-groovy-4.0</version>
+		    <scope>test</scope>
+		</dependency>
+
+<!-- https://mvnrepository.com/artifact/org.testng/testng -->
+		<dependency>
+		    <groupId>org.testng</groupId>
+		    <artifactId>testng</artifactId>
+		    <version>7.7.1</version>
+		    <scope>test</scope>
+		</dependency>
+
+  </dependencies>
+</project>	
